conditions.Conditions.scala.code
if isFancingWall(){
     backward();
} else {
    forward();  
}